--- a/LD44Game/nbproject/project.properties
+++ b/LD44Game/nbproject/project.properties
@@ -31,7 +31,7 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.tween-engine-api.jar=C:\\workspaces\\gitprojects\\galago\\Galago\\libs\\tween-engine-api.jar
+file.reference.tween-engine-api.jar=C:\\gitwork\\galago\\Galago\\libs\\tween-engine-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
