--- a/LD44Game/nbproject/project.properties
+++ b/LD44Game/nbproject/project.properties
@@ -2,7 +2,7 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
-application.title=MyGame
+application.title=PaperCombat
 application.vendor=MyCompany
 assets.jar.name=assets.jar
 assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh\.xml,**/*.skeleton\.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
